...
        </mutableArray>
    </customFonts>
    <scenes>
        <!--Master-->
        <scene sceneID="pY4-Hu-kfo">
            <objects>
                <navigationController title="Master" id="RMx-3f-FxP" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translucent="NO" backIndicatorImage="searchColour" id="Pmd-2v-anx">
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="backgroundColor" red="0.043544491860391665" green="0.067325189505176519" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                        <color key="barTintColor" red="0.047058823529411764" green="0.24313725490196078" blue="0.27058823529411763" alpha="1" colorSpace="calibratedRGB"/>
                        <textAttributes key="titleTextAttributes">
...
