//
//  SecondSetOfTests.swift
//  reCreation
//
//  Created by Daniel Creagh on 24/07/2015.
//  Copyright © 2015 Creagh Creations. All rights reserved.
//

import XCTest

class SecondSetOfTests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testExample() {
      
      XCUIApplication().tables.staticTexts["Qualifications and Education"].tap()
      
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }
  
  
  func testExampleTwo() {
    
    let app = XCUIApplication()
    let tablesQuery = app.tables
    tablesQuery.staticTexts["Projects"].tap()
    
    let masterButton = app.navigationBars.matchingIdentifier("Detail").buttons["Master"]
    masterButton.tap()
    tablesQuery.cells.staticTexts["Qualifications and Education"].tap()
    masterButton.tap()
    tablesQuery.staticTexts["Contact"].tap()
    masterButton.tap()
    tablesQuery.staticTexts["Personal"].tap()
    app.staticTexts["Projects"].tap()
    app.staticTexts["About"].tap()
    masterButton.tap()
    
  }
}
